# sudoku-cli

./: .gitignore  README.md  pyproject.toml
src/: main.py
src/puzzle/: reader.py  saver.py  sudoku.py
src/types/: sudoku_types.py  validation.py
